--- a/src/styles.css
+++ b/src/styles.css
@@ -2,5 +2,5 @@
 @import url(../node_modules/bootstrap/dist/css/bootstrap.min.css);
 
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
