--- a/src/app/components/to-do/to-do.component.html
+++ b/src/app/components/to-do/to-do.component.html
@@ -4,29 +4,40 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-10">
-                <input type="text" class="form-control mb-4" placeholder="New Task">
+                <input type="text" class="form-control mb-4" [(ngModel)]="newTask" placeholder="New Task">
             </div>
             <div class="col-sm-2">
-                <button class="btn btn-primary">Add Task</button>
+                <button class="btn btn-primary" (click)="addTask()">Add Task</button>
             </div>
         </div>
        
         <div class="row">
             <div class="col-sm-11">
-                <table class="table table-striped table-dark">
-                    <thead>
-                        <tr>
-                            <th>Item</th>
-                            <th>Edit</th>
-                            <th>Remove</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <td>Item 1</td>
-                        <td><button class="btn btn-success">Edit</button></td>
-                        <td><button class="btn btn-danger">Remove</button></td>
-                    </tbody>
-                </table>
+                <!-- @if(isAvalible){ -->
+                    <table class="table table-dark table-hover">
+                        <thead class="table-dark">
+                            <tr>
+                                <th>Item</th>
+                                <th>Edit</th>
+                                <th>Remove</th>
+                            </tr>
+                        </thead>
+                        @for (i of tasks; track $index) {
+                        <tbody class="table-dark">
+                          <tr class="bg-dark">
+                           
+                            <td>{{i}}</td>
+                            <td><button class="btn btn-success" (click)="editTask($index,newTask)">Edit</button></td>
+                            <td><button class="btn btn-danger" (click)="removeTask($index)">Remove</button></td>
+                          </tr>
+                        </tbody>
+
+                        }
+                       
+                           
+                    </table>
+                <!-- } -->
+            
             </div>
         </div>
     </div>
